--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "@line/bot-sdk": "^4.0.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {},
   "scripts": {
