--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@line/bot-sdk": "^4.0.0",
     "express": "^4.16.2",
+    "google-spreadsheet": "^2.0.4",
     "lodash": "^4.17.4"
   },
   "devDependencies": {},
